--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 
+#Configuration file
+#key : value
+
+#server.port=7070
+
+
+#FakeStore config variable:
+fakestore.api.url=https://fakestoreapi.com
+fakestore.api.paths.products=/products
+fakestore.api.paths.categorys=/categories
+
+
+#Database Connection
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/nov23productservice
+spring.datasource.username=root
+spring.datasource.password=himanshu
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
+
