--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ fakestore.api.paths.categorys=/categories
 
 
 #Database Connection
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/nov23productservice
 spring.datasource.username=root
 spring.datasource.password=himanshu
