authentication from another service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #Configuration file
 #key : value
 
-#server.port=7070
+server.port=9090
 
 
 #FakeStore config variable:
@@ -18,4 +18,7 @@ spring.datasource.username=root
 spring.datasource.password=himanshu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
+
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
 
