Sorting and Pagination

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #Configuration file
 #key : value
 
-server.port=9090
+server.port=1234
 
 
 #FakeStore config variable:
@@ -12,13 +12,17 @@ fakestore.api.paths.categorys=/categories
 
 
 #Database Connection
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/nov23productservice
-spring.datasource.username=root
-spring.datasource.password=himanshu
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/productservice
+spring.datasource.username=productserviceuser
+spring.datasource.password=Him@nshu.42
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
 
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=https://userservice-class.eu-north-1.elasticbeanstalk.com/
+##spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:4000/
+logging.level.org.springframework.security=trace
+
+logging.level.web=TRACE
