--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,15 @@ spring.jpa.show-sql= true
 ##spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:4000/
 logging.level.org.springframework.security=trace
 
-logging.level.web=TRACE
+#logging.level.web=TRACE
+
+
+#Elasticsearch
+#opensearch.uris=https://opensearch-host:9200
+#spring.main.allow-bean-definition-overriding=true
+
+
+#Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
