--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,29 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/org.opensearch.client/spring-data-opensearch-starter -->
+<!--		<dependency>-->
+<!--			<groupId>org.opensearch.client</groupId>-->
+<!--			<artifactId>spring-data-opensearch</artifactId>-->
+<!--			<version>1.2.0</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.opensearch.client</groupId>-->
+<!--			<artifactId>spring-data-opensearch-starter</artifactId>-->
+<!--			<version>1.3.0</version>-->
+<!--		</dependency>-->
+
+
+		<!--Redis-->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>3.2.3</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
